2015-04-03 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-view-entries.c:
	- do not try to compute balances while currency if not set (todo #786)
	- improve error message.

	Get rid of '(null)' piece reference (todo #787)

	* src/core/ofa-box.c: improve debug management.

	* src/core/ofo-entry.c: set NULL field instead of '(null)'.

	* src/ui/ofa-view-entries.c: make sure null values are written as empty.

	Get rid of rounding errors when displaying the balances (todo #740).

	* src/core/ofs-currency.c: compute integer value of each amount.

	* src/ui/ofa-view-entries.c: compare integer values when choosing the color.

	* src/ui/ofa-view-entries.c:
	- fix ledgers updates when the entry amount is modified (todo #741).

	* src/api/ofo-entry.h,
	* src/core/ofo-entry.c: ofo_entry_is_editable(): new method.

	* src/api/my-utils.h,
	* src/core/my-utils.c,
	* src/core/ofa-idbms.c,
	* src/ui/my-assistant.c,
	* src/ui/ofa-accounts-book.c,
	* src/ui/ofa-bat-treeview.c,
	* src/ui/ofa-classes-page.c,
	* src/ui/ofa-currencies-page.c,
	* src/ui/ofa-dossier-manager.c,
	* src/ui/ofa-dossier-new.c,
	* src/ui/ofa-dossier-properties.c,
	* src/ui/ofa-export-assistant.c,
	* src/ui/ofa-ledgers-page.c,
	* src/ui/ofa-main-window.c,
	* src/ui/ofa-ope-templates-book.c,
	* src/ui/ofa-rates-page.c,
	* src/ui/ofa-reconciliation.c,
	* src/ui/ofa-restore-assistant.c,
	* src/ui/ofa-view-entries.c:
	- my_utils_dialog_yesno() is renamed as my_utils_dialog_question()
	because actually makes use of GTK_MESSAGE_QUESTION flag. 

	* src/api/my-utils.h,
	* src/core/my-utils.c,
	* src/core/ofa-dbms.c,
	* src/core/ofa-dossier-misc.c,
	* src/core/ofa-iexportable.c,
	* src/core/ofo-entry.c,
	* src/ui/ofa-check-balances-bin.c,
	* src/ui/ofa-check-integrity-bin.c,
	* src/ui/ofa-dossier-open.c,
	* src/ui/ofa-exercice-close-assistant.c,
	* src/ui/ofa-export-assistant.c,
	* src/ui/ofa-import-assistant.c,
	* src/ui/ofa-iprintable.c,
	* src/ui/ofa-main-window.c,
	* src/ui/ofa-pdf-dialog.c,